implemented some logic, restful json api

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,9 +5,11 @@ block body
     h2 Hello {{name}}
     ul.menu
       li
-        a(href='view1') view1
+        a(href='cars') cars
       li
-        a(href='view2') view2
+        a(href='map') map
+      li
+        a(href='newcar') new car
 
     div(ng-view)
 
