--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,29 @@ html(ng-app="myApp")
     base(href='/')
     title Angular Express Seed App
     link(rel='stylesheet', href='/css/app.css')
+    link(rel='stylesheet', href='/css/lib/bootstrap/bootstrap.min.css')
   body
-    block body
+    .navbar.navbar-default.navbar-fixed-top(role="navigation")
+      .container-fluid
+        .navbar-header
+          button.navbar-toggle(type="button",data-toggle="collapse",data-target="#bs-navbar")
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='#') Brand
+        #bs-navbar.collapse.navbar-collapse
+          ul.nav.navbar-nav
+            li.active
+              a(href='cars') cars
+            li
+              a(href='map') map
+            li
+              a(href='newcar') new car
+
+    .container-fluid
+      .row-fluid
+        block body
+
+    script(src='js/lib/jquery-1.11.0.min.js')
+    script(src='/js/lib/bootstrap/bootstrap.min.js')
