--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html(ng-app="myApp")
     link(rel='stylesheet', href='/css/lib/bootstrap/bootstrap.min.css')
   body
     .navbar.navbar-default.navbar-fixed-top(role="navigation")
-      .container-fluid
+      .container
         .navbar-header
           button.navbar-toggle(type="button",data-toggle="collapse",data-target="#bs-navbar")
             span.sr-only Toggle navigation
@@ -25,9 +25,8 @@ html(ng-app="myApp")
             li
               a(href='newcar') new car
 
-    .container-fluid
-      .row-fluid
-        block body
+    .container
+      block body
 
     script(src='js/lib/jquery-1.11.0.min.js')
     script(src='/js/lib/bootstrap/bootstrap.min.js')
