--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,22 @@
 extends layout
 
+block navigation
+  div(ng-controller='NavCtrl')
+    .navbar.navbar-default.navbar-fixed-top(role="navigation")
+      .container
+        .navbar-header
+          button.navbar-toggle(type="button",data-toggle="collapse",data-target="#bs-navbar")
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='#') {{brand}}
+        #bs-navbar.collapse.navbar-collapse
+          ul.nav.navbar-nav
+            li(ng-repeat='link in links', ng-click='selectLink($index)', ng-class='{active: $index == selected}')
+              a(href='{{link.url}}') {{link.name}}
+
+
 block body
   div(ng-controller='AppCtrl')
     h2 Hello {{name}}
@@ -10,9 +27,17 @@ block body
       | Angular seed app: v
       span(app-version)
 
+
+block scripts
   script(src='js/lib/angular/angular.js')
   script(src='js/app.js')
   script(src='js/services.js')
   script(src='js/controllers.js')
   script(src='js/filters.js')
   script(src='js/directives.js')
+
+  // // only for a given view..?
+  // script(src="http://maps.google.com/maps/api/js?sensor=false")
+  // script(src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js")
+  // script(src="js/lib/jquery.ui.addresspicker.js")
+  // script(src="js/googleMap.js")
