--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,26 +7,12 @@ html(ng-app="myApp")
     link(rel='stylesheet', href='/css/app.css')
     link(rel='stylesheet', href='/css/lib/bootstrap/bootstrap.min.css')
   body
-    .navbar.navbar-default.navbar-fixed-top(role="navigation")
-      .container
-        .navbar-header
-          button.navbar-toggle(type="button",data-toggle="collapse",data-target="#bs-navbar")
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='#') Brand
-        #bs-navbar.collapse.navbar-collapse
-          ul.nav.navbar-nav
-            li.active
-              a(href='cars') cars
-            li
-              a(href='map') map
-            li
-              a(href='newcar') new car
+    block navigation
 
     .container
       block body
 
     script(src='js/lib/jquery-1.11.0.min.js')
     script(src='/js/lib/bootstrap/bootstrap.min.js')
+
+    block scripts
