--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html(ng-app="myApp")
     title Angular Express Seed App
     link(rel='stylesheet', href='/css/app.css')
     link(rel='stylesheet', href='/css/lib/bootstrap/bootstrap.min.css')
+    link(rel='stylesheet', href='/css/lib/datepicker_standalone3.css')
   body
     block navigation
 
@@ -14,5 +15,6 @@ html(ng-app="myApp")
 
     script(src='js/lib/jquery-1.11.0.min.js')
     script(src='/js/lib/bootstrap/bootstrap.min.js')
+    script(src='/js/lib/bootstrap-datepicker.js')
 
     block scripts
