--- a/views/partials/partial3.jade
+++ b/views/partials/partial3.jade
@@ -1,6 +1,5 @@
 h1 Register new car
 form(name='addNewCar', role='form')
-  div(ng-show='message') {{message}}
   .input-group.col-md-3
     span.input-group-addon Car name
     input(name='carName', ng-model='car.name',type="text",class="form-control", required)
@@ -14,15 +13,12 @@ form(name='addNewCar', role='form')
   h4 Availabilities
   br
   row
-    .col-md-2
-      .input-group
-        span.input-group-addon From
-        input(name='carAvailable', ng-model='car.available', type="text",class="form-control",required)
-    .col-md-2
-      .input-group
-        span.input-group-addon To
-        input(name='carAvailable', ng-model='car.available', type="text",class="form-control",required)
-
+    .input-daterange.input-group
+      input(datepicker, name='dateFrom', ng-model='$parent.car.dateFrom',type="text",class="form-control", placeholder='start',required)
+      span.input-group-addon to
+      input(datepicker, name='dateTo', ng-model='$parent.car.dateTo',type="text",class="form-control", placeholder='end', required)
   br
   row
     button.btn.btn-default(type="submit",ng-click='addCar()', ng-disabled='!addNewCar.$valid') Submit
+  row
+    .alert.alert-success(ng-show='message') {{message}}
