DB working, renamed files and var

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html(ng-app="myApp")
   body
     block navigation
 
-    .container
+    #mainApp.container
       block body
 
     script(src='js/lib/jquery-1.11.0.min.js')
