--- a/views/index.jade
+++ b/views/index.jade
@@ -1,31 +1,28 @@
 extends layout
-a
+
 block navigation
-  div(ng-controller='NavCtrl')
-    .navbar.navbar-default.navbar-fixed-top(role="navigation")
-      .container
-        .navbar-header
-          button.navbar-toggle(type="button",data-toggle="collapse",data-target="#bs-navbar")
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='#') {{brand}}
-        #bs-navbar.collapse.navbar-collapse
-          ul.nav.navbar-nav
-            li(ng-repeat='link in links', ng-class='{active: $index == selected}')
-              a(href='{{link.url}}') {{link.name}}
+  .navbar.navbar-default.navbar-fixed-top(role="navigation")
+    .container(ng-controller='NavCtrl')
+      .navbar-header
+        button.navbar-toggle(type="button",data-toggle="collapse",data-target="#bs-navbar")
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand(href='#') {{brand}}
+      #bs-navbar.collapse.navbar-collapse
+        ul.nav.navbar-nav
+          li(ng-repeat='link in links', ng-class='{active: $index == selected}')
+            a(href='{{link.url}}') {{link.name}}
 
 
 block body
-  div(ng-controller='AppCtrl')
-    h2 Hello {{name}}
-
+  div(ng-controller='RootCtrl')
     div(ng-view)
-
     div
       | Angular seed app: v
       span(app-version)
+
 
 
 block scripts
