--- a/views/partials/newCarForm.jade
+++ b/views/partials/newCarForm.jade
@@ -17,11 +17,18 @@ br
           input(name='carLocation', ng-model='car.location',type="text",class="form-control", required)
       br
       .row
+        .input-group
+          span.input-group-addon $/day
+          input(name='carPrice', ng-model='car.price',type="text",class="form-control", required)
+
+      br
+      .row
         h4 Availabilities
         .input-daterange.input-group
           input(datepicker, name='dateFrom', ng-model='$parent.car.dateFrom',type="text",class="form-control", placeholder='start',required)
           span.input-group-addon to
           input(datepicker, name='dateTo', ng-model='$parent.car.dateTo',type="text",class="form-control", placeholder='end', required)
+
 
 br
 .row
