--- a/views/index.jade
+++ b/views/index.jade
@@ -2,18 +2,22 @@ extends layout
 
 block navigation
   .navbar.navbar-default.navbar-fixed-top(role="navigation")
-    .container(ng-controller='NavCtrl')
-      .navbar-header
-        button.navbar-toggle(type="button",data-toggle="collapse",data-target="#bs-navbar")
-          span.sr-only Toggle navigation
-          span.icon-bar
-          span.icon-bar
-          span.icon-bar
-        a.navbar-brand(href='#') {{brand}}
-      #bs-navbar.collapse.navbar-collapse
-        ul.nav.navbar-nav
-          li(ng-repeat='link in links', ng-class='{active: $index == selected}')
-            a(href='{{link.url}}') {{link.name}}
+    .navbar-inner
+      .container(ng-controller='NavCtrl')
+        .navbar-header
+          button.navbar-toggle(type="button",data-toggle="collapse",data-target="#bs-navbar")
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='#') {{brand}}
+        #bs-navbar.collapse.navbar-collapse
+          ul.nav.navbar-nav
+            li(ng-repeat='link in links', ng-class='{active: link.url == url}')
+              a(href='{{link.url}}') {{link.name}}
+          ul.nav.navbar-nav.pull-right
+            li(ng-class='{active: "/login" == url}')
+              a(href='/login') Login
 
 
 // client side rendering via angular.js
