--- a/views/partials/cars.jade
+++ b/views/partials/cars.jade
@@ -7,11 +7,7 @@
           span.col-sm-4
             input#addresspicker(name='location', ng-model='locationQuery',type="text",class="form-control", placeholder='Where?', required)
           span.col-sm-5
-            .input-daterange.input-group
-              input(datepicker, name='dateFrom', ng-model='$parent.dateQueryFrom',type="text",class="form-control", placeholder='start',required)
-              span.input-group-addon to
-              input(datepicker, name='dateTo', ng-model='$parent.dateQueryTo',type="text",class="form-control", placeholder='end', required)
-
+            div(daterange, ng-model='dateRange')
           span.col-lg-3
             button.btn.btn-default(type="submit",ng-click='carQuery()',ng-disabled='!carsQuery.$valid') Submit
 
