angular js deals with auth

--- a/views/index.jade
+++ b/views/index.jade
@@ -25,4 +25,5 @@ block navigation
 // client side rendering via angular.js
 block body
   div(ng-controller='RootCtrl')
+    div(alert-bar, alertMessage="errorService.errorMessage")
     div(ng-view)
