--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1,5 +1,5 @@
 @import (less) "lib/animate.css";
-@import (less) "lib/font-awesome.min.css";
+// @import (less) "lib/font-awesome.min.css";
 @import "lib/bootstrap/bootstrap";
 @import (less) "/lib/datepicker_standalone3.css";
 
