--- a/views/partials/alertBar.jade
+++ b/views/partials/alertBar.jade
@@ -1,3 +1,3 @@
 .alert.alert-warning.alert-dismissable(ng-show="errorMessage")
-  button.close(type='button',ng-click='hideAlert()')&times;
+  button.close(type='button',ng-click='hideAlert()')x
   {{errorMessage}}
