--- a/views/index.jade
+++ b/views/index.jade
@@ -16,13 +16,13 @@ block navigation
             li(ng-repeat='link in links', ng-class='{active: link.url == url}')
               a(href='{{link.url}}') {{link.name}}
           ul.nav.navbar-nav.pull-right
-            li(ng-show='isLogged',ng-class='{active: "/signup" == url}')
+            li(ng-class='{active: "/signup" == url}')
               a(href='/signup') Sign up
-            li(ng-show='isLogged',ng-class='{active: "/login" == url}')
+            li(ng-class='{active: "/login" == url}')
               a(href='/login') Login
-            li(ng-hide='isLogged',ng-class='{active: "/profile" == url}')
+            li(ng-class='{active: "/profile" == url}')
               a(href='/profile') Sign up
-            li(ng-hide='isLogged',ng-class='{active: "/logout" == url}')
+            li(ng-class='{active: "/logout" == url}')
               a(href='/logout') Logout
 
 
