--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -6,3 +6,11 @@
 #mainApp {
     margin-top : 70px;
 }
+
+#signup-form input.ng-invalid.ng-dirty {
+    background-color: #FA787E;
+}
+
+#signup-form input.ng-valid.ng-dirty {
+    background-color: #78FA89;
+}
