service Authentication keeps track of sid and isLoggedIn

--- a/views/index.jade
+++ b/views/index.jade
@@ -24,6 +24,8 @@ block navigation
               a(href='/profile') Sign up
             li
               a(href='/login',ng-click='logout()') Logout
+            li
+              a {{isLoggedIn}}
 
 
 
