--- a/views/index.jade
+++ b/views/index.jade
@@ -16,16 +16,15 @@ block navigation
             li(ng-repeat='link in links', ng-class='{active: link.url == url}', ng-show='isLoggedIn || !link.authRequired')
               a(href='{{link.url}}') {{link.name}}
           ul.nav.navbar-nav.pull-right
-            li(ng-class='{active: "/signup" == url}')
+            li(ng-hide='isLoggedIn',ng-class='{active: "/signup" == url}')
               a(href='/signup') Sign up
-            li(ng-class='{active: "/login" == url}')
+            li(ng-hide='isLoggedIn',ng-class='{active: "/login" == url}')
               a(href='/login') Login
-            li(ng-class='{active: "/profile" == url}')
-              a(href='/profile') Sign up
-            li
+
+            li(ng-show='isLoggedIn',ng-class='{active: "/account" == url}')
+              a(href='/account') Profile
+            li(ng-show='isLoggedIn')
               a(href='/login',ng-click='logout()') Logout
-            li
-              a {{isLoggedIn}}
 
 
 
