User as resource, profile view and edit working

--- a/views/index.jade
+++ b/views/index.jade
@@ -24,7 +24,7 @@ block navigation
             li(ng-show='isLoggedIn',ng-class='{active: "/account" == url}')
               a(href='/account') Profile
             li(ng-show='isLoggedIn')
-              a(href='/login',ng-click='logout()') Logout
+              a(href='#',ng-click='logout()') Logout
 
 
 
