--- a/views/partials/signup.jade
+++ b/views/partials/signup.jade
@@ -3,7 +3,7 @@
     legend Sign up
     .form-group
       label.col-sm-3.control-label(for='email') Email
-      .col-sm-4
+o      .col-sm-4
         input#email.form-control(type='email', name='email', ng-model='user.email', placeholder='Email', autofocus, required)
       .col-sm-3
         span.label.label-danger(ng-show="signup.email.$error.email") This is not a valid email!
