--- a/views/partials/account.jade
+++ b/views/partials/account.jade
@@ -1,14 +1,30 @@
-.col-sm-8.col-sm-offset-2
-  h1 Profile {{user.email}}
-  br
-  .row
-    .col-sm-4
-      .row
-        p Name: {{user.profile.name}}
-        p Website: {{user.profile.website}}
-        p Location: {{user.profile.location}}
-        p Gender: {{user.profile.gender}}
+.row
+  .col-sm-11.col-lg-offset-1
+    h1 Profile {{user.email}}
+.row
+  .col-md-6.col-md-offset-2.well
+    p Name: {{user.profile.name}}
+    p Website: {{user.profile.website}}
+    p Location: {{user.profile.location}}
+    p Gender: {{user.profile.gender}}
 
-    .col-sm-4.col-sm-offset-2
-      .row
-        a.btn.btn-primary(href='/account/edit') Edit!
+  .col-sm-2
+    a.btn.btn-primary(href='/account/edit') Edit!
+
+.row
+  .col-sm-11.col-lg-offset-1
+    h1 Owned Cars
+.row
+  .col-sm-9.col-md-offset-1
+    div(ng-repeat='car in ownedCars')
+      .col-md-4
+        .well.well-sm
+          .row
+            .col-xs-8
+              h3 {{car.name | lowercase}}
+              h4 {{car.location | lowercase}}
+            .col-xs-4
+              h4
+                span.label.label-danger {{car.price | currency:$}}
+            .col-xs-12
+              p {{car.dateFrom | date:'dd/MM/yyyy'}} - {{car.dateTo | date:'dd/MM/yyyy'}}
