--- a/views/partials/cars.jade
+++ b/views/partials/cars.jade
@@ -18,14 +18,15 @@
       .col-xs-10
         .row
           div(ng-repeat='car in cars')
-            .col-md-4
-              .well.well-sm
-                .row
-                  .col-xs-8
-                    h3 {{car.name | lowercase}}
-                    h4 {{car.location | lowercase}}
-                  .col-xs-4
-                    h4
-                      span.label.label-danger {{car.price | currency:$}}
-                  .col-xs-12
-                    p {{car.dateFrom | date:'dd/MM/yyyy'}} - {{car.dateTo | date:'dd/MM/yyyy'}}
+            a(ng-href='/cars/{{car._id}}')
+              .col-md-4
+                .well.well-sm
+                  .row
+                    .col-xs-8
+                      h3 {{car.name | lowercase}}
+                      h4 {{car.location | lowercase}}
+                    .col-xs-4
+                      h4
+                        span.label.label-danger {{car.price | currency:$}}
+                    .col-xs-12
+                      p {{car.dateFrom | date:'dd/MM/yyyy'}} - {{car.dateTo | date:'dd/MM/yyyy'}}
