--- a/views/partials/viewCar.jade
+++ b/views/partials/viewCar.jade
@@ -1,12 +1,16 @@
 .row
-  .col-sm-5.col-sm-offset-1
-    h1 {{car.name}}
-    h3 {{car.location}}
-    .row
-      .col-sm-6
-        p Available from {{car.dateFrom | date:'dd/MM/yyyy'}} to {{car.dateTo | date:'dd/MM/yyyy'}}
-  .col-sm-6
+  .col-md-4
+    .well.well-sm
+      .row
+        .col-xs-8
+          h3 {{car.name | lowercase}}
+          h4 {{car.location | lowercase}}
+        .col-xs-4
+          h4
+            span.label.label-danger {{car.price | currency:$}}
+        .col-xs-12
+          p {{car.dateFrom | date:'dd/MM/yyyy'}} - {{car.dateTo | date:'dd/MM/yyyy'}}
+
+  .col-sm-3.col-lg-offset-2.well
     h2 Owned by {{car.createdBy.profile.name}}
     p {{car.createdBy.email}}
-          
-         
