minor bugFix and file upload preparation

--- a/views/partials/newCarForm.jade
+++ b/views/partials/newCarForm.jade
@@ -25,6 +25,10 @@ br
       .row
         h4 Availabilities
           input(daterange, ng-model='dateRange', required)
+      // br
+      // .row
+      //   h4 Photos
+      //     input#testUpload(type="file", fileupload, name="files[]", data-url="/server/uploadFile", multiple, done="uploadFinished(e, data)")
 
 br
 .row
