--- a/views/index.jade
+++ b/views/index.jade
@@ -32,7 +32,9 @@ block navigation
 block body
   div(ng-controller='RootCtrl')
     .row
-      .col-sm-8.col-sm-offset-2
+      .col-sm-2
+        div(butterbar) Loading
+      .col-sm-8
         div(alert-bar, alertMessage="errorService.errorMessage")
     .row
       div(ng-view)
