--- a/views/index.jade
+++ b/views/index.jade
@@ -33,7 +33,7 @@ block body
   div(ng-controller='RootCtrl')
     .row
       .col-sm-2
-        div(butterbar) Loading
+        .well.well-lg(butterbar) Loading...
       .col-sm-8
         div(alert-bar, alertMessage="errorService.errorMessage")
     .row
