--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1,10 +1,9 @@
 @import (less) "lib/animate.css";
-// @import (less) "lib/font-awesome.min.css";
+@import (less) "lib/font-awesome.min.css";
 @import "lib/bootstrap/bootstrap";
 @import (less) "lib/datepicker_standalone3.css";
-// @import "lib/jQuery-File-Upload/jquery.fileupload.css";
-// @import "lib/jQuery-File-Upload/jquery.fileupload-ui.css";
-// @import "lib/jQuery-File-Upload/style.css";
+@import "lib/jQuery-File-Upload/jquery.fileupload.css";
+@import "lib/jQuery-File-Upload/style.css";
 
 #mainApp {
     margin-top : 70px;
