--- a/views/partials/login.jade
+++ b/views/partials/login.jade
@@ -2,20 +2,6 @@
   form(method='POST',name='signin',role='form')
     legend Sign In
     .form-group
-      .btn-group.btn-group-justified
-        a.btn.btn-facebook(href='/auth/facebook')
-          i.fa.fa-facebook
-          | Facebook
-        a.btn.btn-twitter(href='/auth/twitter')
-          i.fa.fa-twitter
-          | Twitter
-        a.btn.btn-github(href='/auth/github')
-          i.fa.fa-github
-          | GitHub
-        a.btn.btn-google-plus(href='/auth/google')
-          i.fa.fa-google-plus
-          | Google
-    .form-group
       label.control-label(for='email') Email
       input#email.form-control(ng-model='user.email' ,type='email', name='email', placeholder='Email', autofocus=true, required)
     .form-group
@@ -25,3 +11,6 @@
       button.btn.btn-primary(type="submit",ng-click='loginUser()')
         i.fa.fa-unlock-alt
         | Login
+
+  legend Don't have an account?
+  a(href='/signup') Sign up
