adding a github ribbon

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -14,3 +14,17 @@
 #signup-form input.ng-valid.ng-dirty {
     background-color: #78FA89;
 }
+
+@media (max-width: 979px) {
+    #ribbon {
+        display : none;
+    }
+}
+
+#ribbon {
+    z-index: 10000;
+    position: fixed;
+    top: 51px;
+    right: 0;
+    border: 0;
+}
