--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,7 +13,11 @@ html(ng-app="myApp")
     // else if env == 'production'
     //   != js('application-cdn')
   body
+
     block navigation
+
+    a#ribbon(href="https://github.com/jackokaiser/air-car-and-car")
+      img(src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png",alt="Fork me on GitHub")
 
     #mainApp.container
       block body
