changing the title

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html(ng-app="myApp")
   head
     meta(charset='utf8')
     base(href='/')
-    title Angular Express Seed App
+    title Air Car And Car - a demo angular webapp
     != css('styles')
     != js('application')
 
